--- a/src/About.css
+++ b/src/About.css
@@ -16,7 +16,7 @@
 .about_details p{
     margin-top: 20px;
     margin-bottom: 20px;
-    font-weight: 400;
+    font-weight: 500;
     color: hsl(229, 8%, 60%);
     max-width: 450px;
 }
@@ -38,6 +38,18 @@
     color: #fff;
 }
 
+.about_details button:hover{
+    background-color: #fff ;
+    color: hsl(231, 69%, 60%);
+    border: 2px solid hsl(231, 69%, 60%);
+}
+
+
+
+
+
+
+
 .about_details .button2{
     cursor: pointer;
     box-shadow: 0px 2px 3px grey;
@@ -50,6 +62,14 @@
     background-color:hsl(240, 57%, 95%) ;
     color: hsl(229, 31%, 21%); 
 }
+
+
+.about_details .button2:hover{
+    border: 1px solid hsl(240, 57%, 95%);
+    background-color: hsl(229, 31%, 21%) ;
+    color: hsl(240, 57%, 95%);  
+}
+
 
 .special_div{
     width: 40%;
