--- a/src/Features.css
+++ b/src/Features.css
@@ -1,10 +1,12 @@
 .features h2{
     font-size: 1.8rem;
     text-align: center;
+    color: hsl(229, 31%, 21%);
+    margin-bottom: 10px;
 }
 
 .features{
-    margin: 70px;
+    margin-top: 110px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,7 +16,7 @@
 .features p{
     margin-top: 20px;
     margin-bottom: 20px;
-    font-weight: 400;
+    font-weight: 500;
     color: hsl(229, 8%, 60%);
     max-width: 450px;
     text-align: center;
