updated the mobile view

--- a/src/Faq.css
+++ b/src/Faq.css
@@ -38,4 +38,9 @@
     transform: rotate(180deg);
 }
 
-
+@media screen and (max-width:600px) {
+    .question, .answer{
+        width: 100%;
+    }
+    
+}
