--- a/src/About.css
+++ b/src/About.css
@@ -81,3 +81,44 @@
     border-bottom-left-radius: 40%;
     z-index: -1;
 }
+
+@media screen and (max-width:600px) {
+    .about{
+        display: flex;
+        margin-top: 70px;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
+    .about_details{
+        width: 100%;
+        text-align: center;
+    }
+
+    .about_details h1{
+        font-weight: 700;
+        margin-top: 20px;
+        font-size: 2.3rem;
+        color:hsl(229, 31%, 21%) ;
+    }
+
+    .about_img img {
+        object-fit: contain;
+        width: 400px;
+
+    }
+
+    .special_div{
+        width: 60%;
+        position: absolute;
+        top : 200px;
+        right: 0;
+        height: 200px;
+        background-color: hsl(231, 69%, 60%);
+        border-bottom-left-radius: 40%;
+        z-index: -1;
+    }
+
+
+
+}
