--- a/src/FlexBoxes.css
+++ b/src/FlexBoxes.css
@@ -16,3 +16,23 @@
 .flexbox_3{
     align-self: flex-end;
 }
+
+@media screen and (max-width:600px) {
+    .flexboxes{
+        margin-top: 50px;
+        height: max-content;
+        display: flex;
+        flex-direction: column;
+        /* justify-content: space-evenly; */
+        margin-bottom: 20px;
+
+    }
+
+    .flexbox_1,.flexbox_2,.flexbox_3{
+        align-self: center;
+        margin-bottom: 50px;
+    }
+
+
+    
+}
