--- a/src/Mobile.css
+++ b/src/Mobile.css
@@ -1,4 +1,5 @@
 .mobile{
+    width: 100%;
     padding-left: 5%;
     padding-right: 5%;
     position: absolute;
@@ -13,4 +14,30 @@
     display: flex;
     justify-content: space-between;
 
+}
+
+.mobile_menu{
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+.mobile_menu a {
+    font-weight: 600;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    border-top: 1px solid #fff;
+    text-align: center;
+    text-decoration: none;
+    color: #fff;
+}
+
+.mobile_menu a button{
+    width: 100%;
+    color: #fff;
+    background-color: transparent;
+    border: 2px solid #fff;
+    font-weight: 600;
+    padding: 15px 20px;
 }
