--- a/src/Mobile.css
+++ b/src/Mobile.css
@@ -41,3 +41,14 @@
     font-weight: 600;
     padding: 15px 20px;
 }
+
+.mobile .icon{
+    margin-top: 70px;
+    display: flex;
+    justify-content: center;
+}
+
+.mobile .icon img{
+    margin-left: 30px;
+}
+
