--- a/src/Mobile.css
+++ b/src/Mobile.css
@@ -1,4 +1,5 @@
 .mobile{
+    top: 0;
     width: 100%;
     padding-left: 5%;
     padding-right: 5%;
@@ -6,6 +7,7 @@
     height: 100vh;
     background-color: hsla(229, 31%, 21%, 0.79);
 }
+
 
 .mobile_nav{
     color: #fff;
